--- a/pages/index.css
+++ b/pages/index.css
@@ -1,604 +1,38 @@
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url("../fonts/Inter-Regular.woff2") format("woff2"),
-    url("../fonts/Inter-Regular.woff") format("woff");
-}
-
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url("../fonts/Inter-Bold.woff2") format("woff2"),
-    url("../fonts/Inter-Bold.woff") format("woff");
-}
-
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 900;
-  font-display: swap;
-  src: url("../fonts/Inter-Black.woff2") format("woff2"),
-    url("../fonts/Inter-Black.woff") format("woff");
-}
-
 @import url(../vendor/normalize.css);
-
-body {
-  margin: 0;
-  padding: 0;
-  color: #ffffff;
-  background-color: #2a2c2f;
-}
-.page {
-  max-width: 1280px;
-  font-family: "Inter", "Arial", sans-serif;
-  background-color: #2a2c2f;
-  margin: 0 auto;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  text-rendering: optimizeLegibility;
-}
-@media screen and (max-width: 1280px) {
-  .page {
-      max-width: 1280px;
-      background-color: burlywood;
-    }
-  }
-
-@media screen and (max-width: 1024px) {
-  .page {
-    max-width: 1024px;
-    background-color: mediumpurple;
-  }
-}  
-
-@media screen and (max-width: 768px) {
-  .page {
-    max-width: 768px;
-    background-color: aquamarine;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .page {
-    max-width: 320px;
-    background-color: rosybrown;
-
-  }  
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 28px;
-  margin: auto;
-  max-width: 92.5%;
-  align-items: flex-end;
-}
-
-@media screen and (min-width: 1280px) {
-  .header {
-    max-width: 1184px;
-    background-color: blue;
-  }
-}
-
-.logo {
-  max-width: 176px;
-  max-height: 52px;
-}
-
-.lang-links {
-  font-size: 24px;
-  line-height: 1.17;
-  font-weight: 400;
-}
-
-.lang-link {
-  text-decoration: none;
-  color: #ffffff;
-}
-
-.lang-link:hover {
-  opacity: 0.8;
-}
-
-.lang-link:first-of-type {
-  border-bottom: 2px solid;
-  padding-bottom: 2px;
-  margin-right: 18px;
-}
-
-.content {
-  max-width: 1184px;
-  width: 100%;
-  margin: auto;
-}
-
-@media screen and (max-width: 1024px) {
-  .content {
-    width: 100%;
-  }
-} 
-
-@media screen and (max-width: 768px) {
-  .content {
-    max-width: 768px;
-  }
-} 
-
-.lead {
-  max-width: 83.1%;
-  padding-top: 56px;
-  margin: auto;
-  border: solid 1px blue;
-}
-
-@media screen and (max-width: 1024px) {
-  .lead {
-    min-width: 928px;
-    border: 1px red solid;
-  } 
-}
-
-@media screen and (max-width: 768px) {
-  .lead {
-    min-width: 100%;
-  }
-} 
-
-.lead__title {
-  font-size: 96px;
-  line-height: 100px;
-  font-weight: 900;
-  max-width: 720px;
-  margin: 0;
-  margin: auto;
-  text-align: center;
-}
-
-.lead__subtitle {
-  margin: 0;
-  padding-top: 32px;
-  margin: auto;
-  font-weight: 400;
-  font-size: 30px;
-  line-height: 36px;
-  width: 640px;
-  text-align: center;
-}
-
-.lead__image {
-  max-width: 100%;
-  object-fit: cover;
-  padding-top: 5%;
-  display: flex;
-  align-items: center;
-}
-
-.lead__caption {
-  margin: 0;
-  justify-self: start;
-  padding-top: 8px;
-  text-transform: uppercase;
-  letter-spacing: 1.5px;
-  font-size: 10px;
-  line-height: 1.4;
-  max-width: 100%;
-  align-self: flex-start;
-}
-
-@media screen and (max-width: 768px) {
-  .lead__caption {
-    width: 720px;
-    border: 1px solid black;
-    padding-left: 17px;
-  }
-} 
-
-.intro {
-  padding-top: 92px;
-  width: 83.1%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  border: green solid 1px;
-}
-
-@media screen and (max-width: 1024px) {
-  .intro {
-    min-width: 928px;
-} 
-}
-
-@media screen and (max-width: 768px) {
-  .intro {
-    min-width: 720px;
-    padding-top: 88px;
-} 
-}
-
-.intro__title {
-  margin: 0;
-  font-size: 54px;
-  line-height: 1.07;
-  font-weight: 900;
-}
-
-.intro__text {
-  max-width: 690px;
-  padding-top: 40px;
-  margin: 0;
-  font-size: 16px;
-  line-height: 26.08px;
-  font-weight: 400;
-}
-
-.intro__list {
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  padding-left: 0;
-  padding-top: 33px;
-  font-size: 14px;
-  line-height: 1.5;
-  font-weight: 700;
-}
-
-.intro__list_count {
-  font-weight: normal;
-}
-
-.photo-grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  gap: 16px;
-  margin-top: 92px;
-}
-
-@media screen and (max-width: 1024px) {
-  .photo-grid {
-    max-width: 928px;
-    margin: auto;  
-    padding-top: 92px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    gap: 14px;
-} 
-}
-
-@media screen and (max-width: 768px) {
-  .photo-grid{
-    max-width: 720px;
-    padding-top: 88px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-  }
-} 
-
-.photo-grid__item {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.places {
-width: 83.1%;
-margin: auto;
-border: 1px solid red; 
-display: flex;
-flex-wrap: wrap;
-}
-
-@media screen and (max-width: 1024px) {
-  .places {
-    width: 100%;
-    padding-top: 92px;
-} 
-}
-
-.place {
-  margin-top: 92px;
-  display: grid;
-  grid-template-columns: 460px 484px; 
-  row-gap: 48px;
-  column-gap: 40px;
-  align-items: end;
-  border: 1px solid magenta;
-}
-
-@media screen and (max-width: 1024px) {
-  .place {
-    max-width: 1184px;
-    margin-left: auto;
-    margin-right: auto;
-    grid-template-columns: 440px 456px; 
-    column-gap: 32px;
-} 
-}
-
-@media screen and (max-width: 768px) {
-  .place{
-    max-width: 720px;
-    grid-template-columns: 340px 352px; 
-    column-gap: 28px;
-  }
-} 
-
-.place__title {
-  grid-column: 1/2;
-  grid-row: 1/2;
-  margin: 0;
-  font-size: 72px;
-  line-height: 76px;
-  font-weight: 900;
-  border: springgreen 1px solid;
-}
-
-@media screen and (max-width: 768px) {
-  .place__title{
-    font-size: 42px;
-    line-height: 46px;
-  }
-} 
-
-.place__image {
-  max-width: 460px;
-  grid-column: 1/2;
-  max-width: 100%;
-  max-height: 100%;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border: springgreen 1px solid; 
-}
-
-@media screen and (max-width: 768px) {
-  .place__image{
-    align-self: flex-start;
-    width: 340px;
-height: 340px;
-  }
-} 
-
-.place__website {
-  grid-column: 2/3;
-  grid-row: 1/2;
-  border: springgreen 1px solid;
-  max-width: 484px;
-}
-
-.place__url-heading {
-  font-size: 12px;
-  line-height: 1;
-  font-weight: normal;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  color: #aaaaaa;
-  border: springgreen 1px solid;
-}
-
-.place__link {
-  color: #ffffff;
-  font-size: 18px;
-  line-height: 22px;
-  text-decoration-line: none;
-  border-bottom: solid 1px #ffffff;
-  border: springgreen 1px solid;
-}
-
-.place__link:hover {
-  opacity: 0.8;
-}
-
-.place__paragraph {
-  max-width: 484px;
-  margin: 0;
-  grid-column: 2/3;
-  grid-row: 2/3;
-  font-size: 18px;
-  line-height: 163%;
-  font-weight: normal;
-  align-self: flex-start;
-  border: solid 1px red;
-  border: springgreen 1px solid;
-  justify-self: end;
-}
-
-@media screen and (max-width: 768px) {
-  .place__paragraph {
-    font-size: 16px;
-    line-height: 26.08px;
-  }
-} 
-
-.place__paragraph_break {
-  padding-top: 20px;
-}
-
-.cover {
-  margin-top: 92px;
-  justify-content: center;
-  position: relative;
-  max-width: 1184px; 
-  min-width: 1024px;
-  max-height: 740px;
-  min-height: 640px;
-}
-
-@media screen and (max-width: 1024px) {
-  .cover {
-    margin-top: 92px;
-    display: flex;
-    position: relative;
-    left: 0;
-    max-width: 1024px; 
-    min-width: 768px;
-    max-height: 640px;
-    min-height: 480px;
-    border: solid 2px red;
-  }
-}
-
-@media screen and (max-width: 768px) {
-.cover {
-  margin-top: 90px;
-  max-width: 768px; 
-  min-width: 720px;
-  max-height: 480px;
-  min-height: 400px; 
-}
-}
-
-.cover__background {
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  
-}
-
-
-
-@media screen and (max-width: 1024px) {
-  .cover__background {
-    
-    
-} 
-}
-
-.cover__title_link {
-  position: absolute;
-  color: #ffffff;
-  text-decoration: none;
-  background-color: rgba(42, 44, 47, 0.3);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-items: center;
-  z-index: 3;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-}
-
-@media screen and (max-width: 1024px) {
-  .cover__title_link {
-} 
-}
-
-.cover__title_link:hover {
-  background-color: rgba(42, 44, 47, 0.8);
-}
-
-.cover__title {
-  max-width: 560px;
-  font-size: 72px;
-  font-weight: 900;
-  line-height: 76px;
-  margin-bottom: 32px;
-  margin: 0;
-  text-align: center;
-  color: white;
-}
-
-@media screen and (max-width: 1024px) {
-  .cover__title {
-  } 
-}
-
-
-.cover__subtitle {
-  padding-top: 32px;
-  max-width: 360px;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-  margin: 0;
-}
-
-@media screen and (max-width: 1024px) {
-  .cover__subtitle {
-    bottom: 195px;
-}
-}
-
-.footer {
-  display: flex;
-  justify-content: space-between;
-  max-width: 92.5%;
-  margin: 0;
-  margin: auto;
-  padding-top: 92px;
-  padding-bottom: 24px;
-}
-
-@media screen and (max-width: 768px) {
-  .footer {
-    padding-top: 88px;    
-
-
-
-}
-}
-
-
-@media screen and (min-width: 1280px) {
-  .footer {
-    max-width: 1184px;
-    background-color: blue;
-  }
-}
-
-.footer__links {
-  font-size: 16px;
-  line-height: 18px;
-  font-weight: 400;
-}
-
-.footer__link {
-  color: #ffffff;
-  text-decoration: none;
-  margin-right: 18px;
-}
-
-.footer__link:last-child {
-  margin: 0;
-}
-
-.footer__link:hover {
-  opacity: 0.8;
-}
-
-.footer__copyright {
-  font-size: 14px;
-  line-height: 16px;
-  font-weight: 400;
-}
-
-
-
-@media screen and (min-width: 1280px) {
-
-}
-
-@media screen and (min-width: 1024px) {
-
-}
-
-@media screen and (min-width: 768px) {
-
-}
-
-@media screen and (min-width: 320px) {
-
-}  
+@import url(../vendor/fonts.css);
+@import url(../blocks/body/body.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang-links/header__lang-links.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list/intro__list_count.css);
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+@import url(../blocks/places/places.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__background/cover__background.css);
+@import url(../blocks/cover/__title-link/cover__title-link.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
