убрал разрыв и иконку из html

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -12,6 +12,7 @@
 
 @media screen and (max-width: 768px) {
   .cover__title {
+    max-width: 72.9vw;
     margin: 0;
     font-size: 9.375vw;
     font-weight: 900;
@@ -20,6 +21,7 @@
 }
 @media screen and (max-width: 320px) {
   .cover__title {
+    max-width: 240px;
     font-size: 32px;
     font-weight: 900;
     line-height: 35px;
