правки по 1 ревью

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -27,8 +27,7 @@
 
 @media screen and (max-width: 320px) {
   .cover {
-    margin-top: 90px;
     max-width: 320px;
-    min-height: 188px;
+    max-height: 200px;
   }
 }
