--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,7 +1,16 @@
 .footer__copyright {
+  margin: 0;
   font-size: 14px;
   line-height: 16px;
   font-weight: 400;
+}
+
+@media screen and (max-width: 700px) {
+  .footer__copyright {
+    align-self: flex-end;
+    margin-right: 5vw;
+    box-sizing: border-box;
+  }
 }
 
 @media screen and (max-width: 425px) {
