--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,13 +1,25 @@
 .footer__links {
+  display: flex;
+  flex-wrap: wrap;
   font-size: 16px;
   line-height: 18px;
   font-weight: 400;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+@media screen and (max-width: 700px) {
+  .footer__links {
+    line-height: 24px;
+    font-size: 24px;
+    display: grid;
+    gap: 32px;
+  }
 }
 
 @media screen and (max-width: 425px) {
   .footer__links {
-    line-height: 24px;
-    font-size: 24px;
     display: flex;
     flex-direction: column;
   }
