--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -26,10 +26,16 @@
   }
 }
 
+@media screen and (max-width: 700px) {
+  .footer {
+    margin-left: 5vw;
+  }
+}
+
 @media screen and (max-width: 425px) {
   .footer {
     padding-top: 32px;
     flex-wrap: wrap;
-
+    margin-left: 5vw;
   }
 }
