--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,8 +1,12 @@
 .header__lang-links {
+  display: flex;
+  align-items: flex-end;
   font-size: 24px;
-  line-height: 1.17;
+  line-height: 28px;
   font-weight: 400;
-  padding-bottom: 5px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 @media screen and (max-width: 320px) {
