--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,9 +1,10 @@
 .header__logo {
-object-fit: cover;
+  max-width: 176px;
 }
 
 @media screen and (max-width: 320px) {
   .header__logo {
-width: 44.375%;
+    max-width: 142px;
+    max-height: 42px;
   }
 }
