--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,12 +2,11 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  align-items: flex-end;
-  box-sizing: border-box;
   margin-top: 28px;
   max-width: 1184px;
+  max-height: 52px;
 }
-  
+
 @media screen and (max-width: 1280px) {
   .header {
     max-width: 92.5%;
@@ -29,7 +28,7 @@
 @media screen and (max-width: 320px) {
   .header {
     max-width: 90%;
-    height: 42px;
     margin-top: 16px;
+    max-height: 42px;
   }
 }
