--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -17,7 +17,6 @@
 @media screen and (max-width: 768px) {
   .lead__title {
     font-size: 12.5vw;
-    line-height: calc(12.5vw * 1.1);
+    line-height: calc(12.5vw * (100 / 96));
   }
 }
-
