--- a/blocks/page/__background/page__background.css
+++ b/blocks/page/__background/page__background.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   padding-top: 245px;
   padding-bottom: 245px;
+  background-position: center;
 }
 
 @media screen and (max-width: 1024px) {
@@ -43,5 +44,5 @@
 }
 
 .page__background:hover:after {
-  opacity: 0.7;
+  opacity: 0.8;
 }
