--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,7 @@
 .place__image {
   max-width: 460px;
   object-fit: cover;
+  grid-row: 2/3;
 }
 
 @media screen and (max-width: 1024px) {
@@ -21,4 +22,3 @@
     max-width: 100%;
   }
 }
-
