--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -10,3 +10,10 @@
 .place__link:hover {
   opacity: 0.8;
 }
+
+@media screen and (max-width: 700px) {
+  .place__link {
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+}
