--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -21,9 +21,11 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 700px) {
   .place__title {
     font-size: 32px;
     line-height: 35px;
+    margin-left: 5vw;
+    margin-right: 5vw;
   }
 }
