--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,4 +1,3 @@
-
 .places {
   padding-top: 92px;
   max-width: 984px;
@@ -20,9 +19,10 @@
   }
 }
 
-
 @media screen and (max-width: 700px) {
   .places {
     padding-top: 64px;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
