--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -8,6 +8,7 @@
   list-style: none;
   padding: 0;
 }
+/* обнуление отступов осталось от списка. надо ли убирать.. */
 
 @media screen and (max-width: 768px) {
   .place__paragraph {
