--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -28,6 +28,7 @@
 @media screen and (max-width: 320px) {
   .cover {
     max-width: 320px;
-    max-height: 200px;
+    height: 62.5vw;
+    margin-top: 66px;
   }
 }
