--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   margin-top: 28px;
   max-width: 1184px;
-  max-height: 52px;
+  min-height: 52px;
 }
 
 @media screen and (max-width: 1280px) {
@@ -29,6 +29,6 @@
   .header {
     max-width: 90%;
     margin-top: 16px;
-    max-height: 42px;
+    min-height: 42px;
   }
 }
