--- a/blocks/place/__paragraph-text/place__paragraph-text.css
+++ b/blocks/place/__paragraph-text/place__paragraph-text.css
@@ -1,4 +1,5 @@
 .place__paragraph-text {
+  margin: 0;
   font-size: 18px;
   line-height: 163%;
   font-weight: normal;
@@ -8,3 +9,10 @@
 .place__paragraph-text:last-of-type {
   margin-bottom: 0;
 }
+
+@media screen and (max-width: 768px) {
+  .place__paragraph-text {
+    font-size: 16px;
+  }
+}
+
