сделал язык не по бэм(

--- a/blocks/header/__lang-link/_active/header__lang-link_active-ru.css
+++ b/blocks/header/__lang-link/_active/header__lang-link_active-ru.css
@@ -1,13 +1,9 @@
-.lang__active_ru:lang(ru) {
+.header__lang-link_active-ru:lang(ru) {
   border-bottom: 1px solid white;
 }
-.lang__active_en:lang(en) {
-  border-bottom: 1px solid white;
-}
-
 /* не понимаю как должно быть. переключатель же должен переключать...
 пока нет страницы на английском и я не знаю как должен меняться lang=ru 
 на lang-en, но в теории на их смену можно повлиять из этих кнопок,
 тогда и выделение перейдет на нужную
 
-ну а с точки зрения брифа же более-менее верно? подчеркнуто? подчеркнуто))*/
+ну а с точки зрения брифа же более-менее верно? подчеркнуто? подчеркнуто)
