--- a/blocks/lang-link/_active/lang-link_active_ru.css
+++ b/blocks/lang-link/_active/lang-link_active_ru.css
@@ -6,4 +6,4 @@
 на lang-en, но в теории на их смену можно повлиять из этих кнопок,
 тогда и выделение перейдет на нужную
 
-ну а с точки зрения брифа же более-менее верно? подчеркнуто? подчеркнуто)
+ну а с точки зрения брифа же более-менее верно? подчеркнуто? подчеркнуто) */
